--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <title>Rubrash | Personal Portfolio HTML Template</title>
         <meta name="description" content="">
+        <meta name="theme-color" content="#8D53FE" />
         <!-- responsive tag -->
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
