meta theme color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta charset="utf-8">
         <title>Rubrash | Personal Portfolio HTML Template</title>
         <meta name="description" content="">
-        <meta name="theme-color" content="#8D53FE" />
+        <!-- Chrome, Firefox OS and Opera -->
+        <meta name="theme-color" content="#8D53FE">
+        <!-- Windows Phone -->
+        <meta name="msapplication-navbutton-color" content="#8D53FE">
+        <!-- iOS Safari -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="#8D53FE">
         <!-- responsive tag -->
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
